[package]
name = "zfx-subzero"
version = "0.1.0"
authors = ["zero.fx <contact@zerofxlabs.com>"]
license = "MIT"
edition = "2018"

[[bin]]
name = "node"
path = "./bin/main.rs"

[[bin]]
name = "client_test"
path = "./bin/client_test.rs"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "basic_benchmark"
harness = false

[dependencies]
zfx-sortition = { git = "https://github.com/zfxlabs/zfx-sortition", branch = "master" }
sled = "0.34.6"
actix = "0.12.0"
actix-rt = "*"
actix_derive = "0.6.0-beta.1"
actix-service = "2.0.2"
actix-server = "2.0.0-rc.4"
clap = "2.33.3"
colored = "2"
env_logger = "*"
rand = "0.7.0"
bytes = "*"
byteorder = "*"
zerocopy = "*"
blake2 = "0.10.2"
blake3 = "*"
ed25519-dalek = { version = "1", features = ["serde"] }
bincode = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }
tokio-serde = { version = "*", features = ["bincode"] }
tracing = "*"
tracing-futures = { version = "*" }
tracing-subscriber = "*"
futures = "*"
futures-util = "*"
serde = { version = "1.0.132", features = ["derive"] }
serde_derive = "1.0.132"
hex = "*"
tai64 = { version = "4.0.0", features = ["serde"] }
base58check = "*"

priority-queue = "1.2.1"

dirs = "4.0.0"
igd = { version = "*", features = ["aio"] }

# For TLS support
tokio-rustls = { version = "0.23.1", features = ["dangerous_configuration"] }
rustls = "*"
# For TLS/X509 certificates
rcgen = "0.8.14"
ring = "0.16.20"
pem = "1.0.1"
x509-parser = ">= 0.10.0"

derive_more = "0.99.9"
lazy_static = "1.4"

[features]
integration_tests = []
hail_test = []
